test/files/neg/t10507.check
Test_2.scala:2: error: called constructor's definition must precede calling constructor's definition
  Macros_1.seq
           ^
1 error
